# streamControl

./: CMakeLists.txt  README.md  XAudioDevice.cpp  XDecode.cpp  XDecode.h  XParMng.h  XPlayDevice.h  XResample.cpp  XResample.h  XUnpackage.cpp  XUnpackage.h  XVideoWidget.cpp  XVideoWidget.h  main.cpp  mainwindow.ui
